[package]
name = "kludged"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "color", "suggestions", "wrap_help"], optional = true }
clap-verbosity-flag = "2.2.0"
color-print = "0.3.6"
hidapi = "2.6.1"
palette = {version = "0.7.5", default-features = false, features=["libm", "named", "named_from_str"]}
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.59"

[features]
cli = ["dep:clap"]
default = ["cli"]
